# spaceprime

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ai_log.txt  benchmarking-results.html  benchmarking.html  changelog.html  cli.html  contributing.html  demographic_change_2D.prof  github-issue.ipynb  index.html  kmat.npy  mkdocs.yml  overview.html  pyproject.toml  requirements.txt  requirements_analysis.txt  requirements_dev.txt  robots.txt  search.json  sitemap.xml  sp-sandbox-2023-04-13.py  spaceprime-for-r-users.html  spaceprime-sandbox.html  spaceprime-sandbox.ipynb  transformation-functions.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: deploy.yml  docs-build.yml  docs.yml  installation.yml  macos.yml  macos13.yml  pypi.yml  ubuntu.yml  windows.yml
benchmarking/: __init__.py  analyze_results.py  benchmark_utils.py  config.py  run_benchmarks.py
benchmarking/results/: .gitkeep
debug_output/: debug_2dss.txt  debug_2dss_github.txt  debug_2dss_k1.txt  debug_2dss_tophalf.txt  debug_2dss_topright.txt  debug_2dss_topright10.txt  debug_2dss_topright20.txt  debug_2dss_topright20bhalf.txt  debug_2dss_topright20bhalf10.txt
docs/: _quarto.yml  _sidebar.yml  analysis.md  benchmarking-results.qmd  benchmarking.qmd  changelog.md  common.md  contributing.qmd  demography.md  index.md  index.qmd  installation.md  objects.txt  spaceprime-for-r-users.qmd  spaceprime.md  transformation-functions.qmd  usage.md  utilities.md
docs/_freeze/benchmarking-results/execute-results/: html.json
docs/_site/: changelog.html  cli.html  contributing.html  index.html  search.json  spaceprime-for-r-users.html  transformation-functions.html
docs/_site/old/: changelog.html  demography.html  faq.html  trans-fns.html  usage.html
docs/_site/reference/: anc_to_deme_dict.html  calc_migration_matrix.html  calc_sumstats.html  coords_to_deme_dict.html  coords_to_sample_dict.html  create_raster.html  filter_gt.html  index.html  plot_model.html  plot_timeseries.html  raster_to_demes.html  sim_mutations.html  spDemography.html  split_landscape_by_pop.html
docs/background/: trans-fns.md
docs/reference/: anc_to_deme_dict.qmd  calc_migration_matrix.qmd  calc_sumstats.qmd  coords_to_deme_dict.qmd  coords_to_sample_dict.qmd  create_raster.qmd  filter_gt.qmd  index.qmd  mtp_thresh_from_coords.qmd  plot_landscape.qmd  plot_model.qmd  plot_timeseries.qmd  raster_to_demes.qmd  sim_ancestry.qmd  sim_mutations.qmd  spDemography.add_ancestral_populations.qmd  spDemography.qmd  spDemography.stepping_stone_2d.qmd  split_landscape_by_pop.qmd
python/: demographic_change_2D.py  scale_migration_rates.py
reference/: anc_to_deme_dict.html  calc_migration_matrix.html  calc_sumstats.html  coords_to_deme_dict.html  coords_to_sample_dict.html  create_raster.html  filter_gt.html  index.html  mtp_thresh_from_coords.html  plot_landscape.html  plot_model.html  plot_timeseries.html  raster_to_demes.html  sim_ancestry.html  sim_mutations.html  spDemography.add_ancestral_populations.html  spDemography.html  spDemography.stepping_stone_2d.html  split_landscape_by_pop.html
site_libs/bootstrap/: bootstrap-2943714e998efdc59ecfe5cdbedfd1a6.min.css  bootstrap-79f7253b5fe2f03f0ff14de0bedafa3a.min.css  bootstrap-da5d8bd06404b93049c0fac9d2ad062f.min.css  bootstrap.min.css
spaceprime/: __init__.py  analysis.py  cli.py  demography.py  plot.py  plotting.py  simulation.py  utilities.py
spaceprime/data/: localities.geojson  projections.tif
templates/: config.yaml
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_demography.py  test_plot.py  test_simulation.py  test_spaceprime.py  test_utilities.py
tests/data/: demes_raster.tif
