[project]
name = "spaceprime"
version = "0.0.5"
description = "A python package to facilitate spatially explicit coalescent modeling in msprime"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "spaceprime",
]
license = {text = "MIT License"}
authors = [
  {name = "Connor French", email = "french.connor.m@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "numpy<2",
    "typing",
    "msprime",
    "rasterio>=1.0.0",
    "scipy",
    "shapely",
    "geopandas",
    "scikit-allel",
    "contextily",
    "matplotlib",
    "folium",
    "mapclassify",
]

[project.scripts]
spaceprime = "spaceprime.cli:main"

[project.optional-dependencies]
all = [
    "spaceprime[analysis]",
]

analysis = [
    "esda >= 2.5.1",
    "libpysal >= 4.10",
    "scikit-learn",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/connor-french/spaceprime"

[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spaceprime"]

[tool.hatch.version]
path = "spaceprime/__init__.py"

# Keep your pixi configuration
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
spaceprime = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["all", "analysis"], solve-group = "default" }
analysis = { features = ["analysis"], solve-group = "default" }

# Keep other tools you need
[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88